# my-eat-right-backend

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml
auth/: auth_route.py  controller.py  dbschema.py  models.py  route.py
crud/: crud.py
dependencies/: db.py  user_deps.py
middleware/: log_middleware.py
migrations/: env.py
migrations/versions/: 81e8993df55d_initial_migration.py
users/: controller.py  dbschema.py  models.py  user_route.py
utils/: config_utils.py  db_utils.py  email_utils.py  file_config_utils.py  logger_utils.py  pass_utils.py  token_utils.py  user_utils.py
